--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <head>
 <title>flowers</title>
 <body>
-welcome flowers
+welcome flowers rrrr
 </body>
-
+<h1>something</h1>
+<h2>some h2 tag</h2>
 </head>
 </html>
